Write PNG file instead of PPM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,12 @@ project(shot VERSION 1.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
+#set(CMAKE_CXX_FLAGS "-O3 -D_REENTRANT -Wall -Wextra -Wpedantic -fsanitize=address,leak,undefined")
 set(CMAKE_CXX_FLAGS "-O3 -D_REENTRANT -Wall -Wextra -Wpedantic")
 
 SET(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
-link_libraries(X11 Xext GLX GL GLEW)
+link_libraries(X11 Xext GLX GL GLEW png16 z)
 
 add_executable(shot
     src/main.cpp
